syntax = "proto3";

package mdsyncMsg;

enum operation
{
    /* == general option == */
    getDirInfo=0;
    getFileInfo=1;
    uploadReq=2;
    downloadReq=3;
    newFileReq=4;
    getTree=5;

    /* == fs option == */
    rm=6;
    rmdir=7;
    mkdir=8;
    mv=9;
    mvdir=10;
    rename=11;
};

enum fileType
{
    directory=0;
    markdown=1;
    other=2;
};

message loginInfo
{
    string name=1;
    string passwd=2;
};

message request
{
    string uuid=1;
    operation op=2;
    string address=3;   //should be absolute (start with /)
    string extra=4;
};

message response
{
    int32 status=1;
    string uuid=2;
};

message fileInfo
{
    int32 status=1;
    fileType type=2;
    string name=3;
    string timestamp=4;
    string date=5;
    int64 size=6;
    string md5=7;
    string id=8;
};

message socketInfo
{
    int32 status=1;
    string ip=2;
    string port=3;
    string nodeid=4;
};

message JSONString
{
    string json=1;
}

service serviceMDSync
{
    rpc login(loginInfo) returns (response);
    rpc getDirInfo(request) returns (stream fileInfo);
    rpc getFileInfo(request) returns (fileInfo);
    rpc fileOperation(request) returns (response);
    rpc uploadReq(request) returns (socketInfo);
    rpc downloadReq(request) returns (socketInfo);
    rpc newFileReq(request) returns (socketInfo);
    rpc getFileTree(request) returns (JSONString);
    rpc getTimeStamp(request) returns (JSONString);
};